# AOG_Boards_New

./: .aog_build_role  .gitignore  AGENTS.md  AGENTS_NAV_R8_APPENDIX.md  CHANGELOG.md  CMakeLists.txt  NAV-FIX-001-R2-Testbericht.txt  PATCH_NOTES.md  PATCH_NOTES2.txt  README.md  agents.md  platformio.ini  sdkconfig.defaults  sdkconfig.nav_esp32_t_eth_lite  sdkconfig.steer_esp32s3_t_eth_lite  test_results.txt  worklog.md
.github/workflows/: build_1.yml  ci_1.yml  ci_3.yml  native-tests.yml
AOG_ESP_Multiboard/: CMakeLists.txt  partitions.csv  platformio.ini
agents/: developer.md  planner.md  reviewer.md  rules.md
components/actuator_drv8263h/: CMakeLists.txt  actuator_drv8263h.c  actuator_drv8263h.h  library.json
components/ads1118/: CMakeLists.txt  ads1118.c  ads1118.h  library.json
components/aog_navigation_app/: CMakeLists.txt  aog_navigation_app.c  aog_navigation_app.h  library.json
components/aog_steering_app/: CMakeLists.txt  aog_steering_app.c  aog_steering_app.h  library.json
components/app_core/: CMakeLists.txt  app_core.c  app_core.h  library.json
components/board_profiles/: board_profile.c  board_profile.h  library.json
components/cli/: library.json
components/console/: CMakeLists.txt  console.c
components/feature_flags/: CMakeLists.txt  feature_flags.c  feature_flags.h  library.json
components/gnss_dual_heading/: CMakeLists.txt  gnss_dual_heading.c  gnss_dual_heading.h  library.json
components/gnss_nmea_config/: CMakeLists.txt  gnss_nmea_config.c  gnss_nmea_config.h  library.json
components/gnss_snapshot/: CMakeLists.txt  gnss_snapshot.c  gnss_snapshot.h  library.json
components/gnss_um980/: CMakeLists.txt  gnss_cache.c  gnss_cache.h  gnss_rx_task.c  gnss_rx_task.h  gnss_um980.c  gnss_um980.h  library.json
components/gnss_um980_control/: CMakeLists.txt  gnss_um980_control.c
components/gnss_um980_snapshot/: CMakeLists.txt  gnss_um980_snapshot.c
components/hal_backend/: CMakeLists.txt  hal_backend.c  hal_backend.h  library.json
components/hal_eth/: CMakeLists.txt  hal_eth.c  hal_eth.h  hal_eth_backend.h  hal_eth_backend_esp32.c  hal_eth_backend_sim.c  library.json
components/hal_gpio/: CMakeLists.txt  hal_gpio.c  hal_gpio.h  hal_gpio_backend.h  hal_gpio_backend_esp32.c  hal_gpio_backend_sim.c  library.json
components/hal_nvs/: CMakeLists.txt  hal_nvs.c  hal_nvs.h  hal_nvs_backend.h  hal_nvs_backend_esp32.c  hal_nvs_backend_sim.c  library.json
components/hal_ota/: CMakeLists.txt  hal_ota.c  hal_ota.h  hal_ota_backend.h  hal_ota_backend_esp32.c  hal_ota_backend_sim.c  library.json
components/hal_reset/: CMakeLists.txt  hal_reset.c  hal_reset.h  hal_reset_backend.h  hal_reset_backend_esp32.c  hal_reset_backend_sim.c  library.json
components/hal_spi/: CMakeLists.txt  hal_spi.c  hal_spi.h  hal_spi_backend.h  hal_spi_backend_esp32.c  hal_spi_backend_sim.c  library.json
components/hal_time/: CMakeLists.txt  hal_time.c  hal_time.h  hal_time_backend.h  hal_time_backend_esp32.c  hal_time_backend_sim.c  library.json
components/hal_uart/: CMakeLists.txt  hal_uart.c  hal_uart.h  hal_uart_backend.h  hal_uart_backend_esp32.c  hal_uart_backend_sim.c  hal_uart_esp32.c  hal_uart_stub.c  library.json
components/hw_runtime_diag/: CMakeLists.txt  hw_runtime_diag.c  hw_runtime_diag.h  library.json
components/imu_bno085/: CMakeLists.txt  imu_bno085.c  imu_bno085.h  library.json
components/nav_config/: CMakeLists.txt  nav_config.c  nav_config.h  nav_ntrip_config.h  nav_ntrip_secrets.example.h
components/nav_diagnostics/: CMakeLists.txt  library.json  nav_diag_log.c  nav_diag_log.h  nav_diagnostics.h  nav_health.c  nav_health.h  nav_recovery.c  nav_recovery.h
components/nav_rtcm_wiring/: CMakeLists.txt  library.json  nav_rtcm_wiring.c  nav_rtcm_wiring.h
components/ntrip_client/: CMakeLists.txt  library.json  ntrip_client.c  ntrip_client.h
components/protocol_aog/: CMakeLists.txt  aog_frame.c  aog_frame.h  aog_pgn.c  aog_pgn.h  library.json  protocol_aog.c  protocol_aog.h
components/protocol_nmea/: CMakeLists.txt  library.json  nmea_parser.c  nmea_parser.h  protocol_nmea.c  protocol_nmea.h
components/protocol_rtcm/: CMakeLists.txt  library.json  protocol_rtcm.c  protocol_rtcm.h  rtcm_passthrough.c  rtcm_passthrough.h
components/remote_diag/: CMakeLists.txt  library.json  remote_diag.c  remote_diag.h
components/remote_log/: CMakeLists.txt  remote_log.c
components/rtcm_router/: CMakeLists.txt  library.json  rtcm_router.c  rtcm_router.h
components/runtime/: CMakeLists.txt  library.json  runtime.c  runtime.h  runtime_mode.c  runtime_mode.h  runtime_types.h
components/runtime_buffers/: CMakeLists.txt  byte_ring_buffer.c  byte_ring_buffer.h  library.json
components/runtime_components/: CMakeLists.txt  library.json  runtime_component.c  runtime_component.h
components/runtime_fast/: CMakeLists.txt  library.json  task_fast.c  task_fast.h  task_service.c  task_service.h
components/runtime_health/: CMakeLists.txt  library.json  runtime_health.c  runtime_health.h
components/runtime_queue/: CMakeLists.txt  library.json  message_queue.c  message_queue.h
components/runtime_snapshot/: CMakeLists.txt  library.json  snapshot_buffer.c  snapshot_buffer.h
components/runtime_stats/: CMakeLists.txt  library.json  runtime_stats.c  runtime_stats.h
components/runtime_types/: library.json  runtime_types.h
components/runtime_watchdog/: CMakeLists.txt  library.json  runtime_watchdog.c  runtime_watchdog.h
components/safety_failsafe/: CMakeLists.txt  library.json  safety_failsafe.c  safety_failsafe.h
components/steering_control/: CMakeLists.txt  library.json  steering_control.c  (+1 more)
docs/: testing.md
extra_scripts/: native_test.py  nav_gate.py
main/: app_main.cpp
partitions/: nav_esp32_ota_16mb.csv  steer_esp32s3_ota_16mb.csv
prompts/: NAV-R8-MIDNIGHT-REBASE-INTEGRATED-FIX.md
remote_log_diff/: PATCH_NOTES.txt  app_core.c  platformio.ini  remote_diag.c  remote_diag.h  remote_diag_CMakeLists.txt
role_nav/: app_core_nav.c
role_steer/: app_core_steer.c
src/: CMakeLists.txt  app_main.cpp
tools/: run_sandbox_tests.py
(+150 files in other folders)
